--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </a>
             </div>
         </section>
-        <img src="./assets/imagem.png" alt="Foto de Guilherme">
+        <img class="apresentacao__imagem" src="./assets/imagem.png" alt="Foto de Guilherme">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Guilherme.</p>
