--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
                 cupidatat non.</p>
 
         </section>
-        <img src="./assets/imagem.png" alt="Foto da Joana Santos programando">
+        <img class="apresentacao__imagem" src="./assets/imagem.png" alt="Foto da Joana Santos programando">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Guilherme.</p>
